UCDetector 1.5.0 from 2010-:
Bugfixes:
 - [ 2922801 ] Quick fix exception on enum declaration 

New features:
 - 