@@ -43,6 +43,8 @@ PreferencePage_IgnoreFieldFilter=&Fields
 PreferencePage_IgnoreFieldFilterToolTip=Fields matching this expression, will be ignored during detection
 PreferencePage_IgnoreAnnotationsFilter=Code with &Annotations
 PreferencePage_IgnoreAnnotationsFilterToolTip=Code marked with these annotations (without '@'), will be ignored during detection (full class name recommended)
+PreferencePage_IgnoreImplements=Classes implementing/extending
+PreferencePage_IgnoreImplementsToolTip=Ignore classes implementing/extending this classes or interfaces (full class name recommended)
 PreferencePage_IgnoreContainString=Classes containing string
 PreferencePage_IgnoreContainStringToolTip=Classes containing one of these strings, will be ignored during detection - useful for generated code
 PreferencePage_IgnoreBeanMethods=&Ignore bean methods
