@@ -1,6 +1,7 @@
 UCDetector 1.5.0 from 2010-:
 Bugfixes:
  - [ 2922801 ] Quick fix exception on enum declaration 
+ 
 
 New features:
- - 
+ - [ 2929828 ] Added filter to exclude classes extending/implementing
